@@ -1,3 +1,8 @@
+Tue Aug 28 04:33:21 GMT 2012  Dan Colish <dcolish@gmail.com>
+
+	* java/SmokeTest.java,java/java.i: Implement and test MSetIterator,
+	  ESetIterator. Fix PostingIterator, ValueIterator, and TermIterator.
+
 Sun Aug 12 05:45:32 GMT 2012  Dan Colish <dcolish@gmail.com>
 
 	* java/Makefile.am,java/run-java-test: Remove jdb target from
